# memora

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  current_schema.json  db_setup.sql  docker-compose.yaml
src/: client.rs  error.rs  handler.rs  jwt_auth.rs  lib.rs  main.rs  node.rs
src/agent/: agent.rs
src/api/: file.rs  user.rs
src/config/: app.rs  config.rs
src/model/: file.rs  user.rs
src/schema/: file.rs  user.rs
src/utils/: token.rs
