[package]
name = "memora"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
charybdis = "0.7.10"
chrono = "0.4.34"
dotenvy = "0.15.7"
scylla = { version = "0.15.1" }
serde = {version = "^1", features = ["derive"]}
serde_json = "1.0.134"
tokio = "1.42.0"
thiserror = "1.0.56"
uuid = {version = "^1", features = ["v1"]}
log = "^0.4"
validator = { version = "0.19.0", features = ["derive"] }
derive_more = "^0.99"
env_logger = "0.11.6"
pnet = "0.35.0"
aws-sdk-s3 = "1.66.0"
aws-config = "1.5.11"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
futures-util = "0.3.31"
cargo-watch = "8.5.3"
